i make some chages according to my father's will 1

--- a/sideProject/classe/classe.html
+++ b/sideProject/classe/classe.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../../style.css">
     <link rel="stylesheet" href="class.css">
 
-    <link rel="icon" type="image/png" sizes="32x32" href="../../tot.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../../logo2.png">
 
        <!-- FONT AWESOME -->
        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -19,7 +19,7 @@
 <body>
     <nav id="navbar">
         <div class="logo">
-            <img id="logo-img" src="../../tot.png" alt="Logo">
+            <img id="logo-img" src="../../logo2.png" alt="Logo">
             <hr>
             <h4> <a href="../../index.html">Ecole Imam Moussa Touré</a></h4>
         </div>
@@ -35,7 +35,7 @@
     </nav>
 
     <header id="classe">
-        <h1>Classe</h1>
+        <h1>Classes</h1>
     </header>
 
     <section id="tout-classes">
