--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
 
-    <link rel="icon" type="image/png" sizes="32x32" href="tot.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="logo2.png">
 
 
     <title>Ecole Imam Moussa Touré</title>
@@ -23,7 +23,7 @@
     <nav id="navbar">
         <!-- <h3><a href="index.html">Diallo.School</a></h3> -->
         <div class="logo">
-            <img id="logo-img" src="tot.png" alt="Logo">
+            <img id="logo-img" src="logo2.png" alt="Logo">
             <hr>
             <h4><a href="#">Ecole Imam Moussa Touré</a></h4>
         </div>
@@ -99,6 +99,13 @@
 
     </section>
 
+    <div id="video">
+        <video controls>
+            <source src="video/video.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>
+
     <div class="orientation">
         <h2>orientation pour les CM2</h2>
         <div class="ecole-orient">
@@ -165,7 +172,7 @@
     <hr>
 
     <div class="globe">
-        <img src="image/tinywow_change_bg_photo_39782213.png" alt="">
+        <img src="logo2.png" alt="">
         <div id="footer">
             <h2>Diallo.School</h2>
             <hr>
