--- a/sideProject/Abdministration/admin.html
+++ b/sideProject/Abdministration/admin.html
@@ -13,7 +13,7 @@
     <!-- BOX ICON -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
-    <link rel="icon" type="image/png" sizes="32x32" href="../../tot.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../../logo2.png">
 
 
     <title>Ecole Imam Moussa Touré / Administration</title>
@@ -21,7 +21,7 @@
 <body>
     <nav id="navbar">
         <div class="logo">
-            <img id="logo-img" src="../../tot.png" alt="Logo">
+            <img id="logo-img" src="../../logo2.png" alt="Logo">
             <hr>
             <h4> <a href="../../index.html">Ecole Imam Moussa Touré</a></h4>
         </div>
@@ -100,7 +100,7 @@
 
 
     <div class="globe">
-        <img src="../../image/tinywow_change_bg_photo_39782213.png" alt="">
+        <img src="logo2.png" alt="School logo">
         <div id="footer">
             <h2>Diallo.School</h2>
             <hr>
