i add images and the history of the school in the about.html i correct the style of info.html

--- a/sideProject/Abdministration/admin.html
+++ b/sideProject/Abdministration/admin.html
@@ -16,7 +16,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="../../logo2.png">
 
 
-    <title>Ecole Imam Moussa Touré / Administration</title>
+    <title>Ecole Imam Moussa Touré</title>
 </head>
 <body>
     <nav id="navbar">
@@ -27,8 +27,8 @@
         </div>
         <ul>
             <p class="close-btn"><i class="fa-solid fa-xmark" style="color: #000000;"></i></p>
-            <li><a href="">About</a></li>
-            <li><a href="#">Administration</a></li>
+            <li><a href="../about/about.html">About</a></li>
+            <li><a href="admin.html">Administration</a></li>
             <li><a href="../classe/classe.html">Classes</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
@@ -39,9 +39,10 @@
     <section id="admin">
 
         <div class="directeur">
-            <h1>Directeur</h1>
+            <img src="../../image/546.jpg" alt="directeur">
+            
             <div class="directeur-body">
-                <img src="../../image/546.jpg" alt="directeur">
+                <h1>Directeur</h1>
                 <p>A enseigner à Ecole Bilal et à l'Ecole Abdoul Ahad Mbacke en même temps, à Bilal le matin et Abdoul Ahad le l'aprés midi pendant peut-être 15ans, à étudier la pedagogie. Aujourd'hui, il enseigen dans un progrmme nommer CIFOD, donne des cours particulier et a reussi à fonder unecole avec des compagnon</p>
             </div>
         </div>
@@ -99,8 +100,8 @@
     <hr>
 
 
-    <div class="globe">
-        <img src="logo2.png" alt="School logo">
+    <footer>
+        <img src="../../logo2.png" alt="">
         <div id="footer">
             <h2>Diallo.School</h2>
             <hr>
@@ -124,8 +125,9 @@
             </div>
         </div>
         <hr>
-        <p class="copy">Copyright  <span class="date"></span></p>
-    </div>
+        <p class="copy"><i class='bx bx-copyright'></i>Copyright  <span class="date"></span></p>
+    </footer>
 
     <script src="../script.js" type="text/javascript"></script>
+    <script src="../../index.js" type="text/javascript"></script>
 </body>    
