--- a/sideProject/Info/info.html
+++ b/sideProject/Info/info.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <link rel="stylesheet" href="../../style.css">
     <link rel="stylesheet" href="info.css">
+    <link rel="stylesheet" href="../../style.css">
 
-    <link rel="icon" type="image/png" sizes="32x32" href="../../tot.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../../logo2.png">
 
        <!-- FONT AWESOME -->
        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -19,17 +19,17 @@
 <body>
     <nav id="navbar">
         <div class="logo">
-            <img id="logo-img" src="../../tot.png" alt="Logo">
+            <img id="logo-img" src="../../logo2.png" alt="Logo">
             <hr>
             <h4> <a href="../../index.html">Ecole Imam Moussa Touré</a></h4>
         </div>
         <!-- <h3><a href="../../index.html">Diallo.School</a></h3> -->
         <ul>
             <p class="close-btn"><i class="fa-solid fa-xmark" style="color: #000000;"></i></p>
-            <li><a href="">About</a></li>
+            <li><a href="../about/about.html">About</a></li>
             <li><a href="../Abdministration/admin.html">Administration</a></li>
-            <li><a href="sideProject/classe/classe.html">Classes</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="../classe/classe.html">Classes</a></li>
+            <li><a href="#contact">info</a></li>
         </ul>
         <div class="bars"><i class="fa-solid fa-bars"></i></div>
     </nav>
@@ -40,8 +40,8 @@
     </header>
 
 
-    <div class="globe">
-        <img src="../../image/tinywow_change_bg_photo_39782213.png" alt="">
+    <footer>
+        <img src="../../logo2.png" alt="">
         <div id="footer">
             <h2>Diallo.School</h2>
             <hr>
@@ -65,9 +65,10 @@
             </div>
         </div>
         <hr>
-        <p class="copy">Copyright  <span class="date"></span></p>
-    </div>
+        <p class="copy"><i class='bx bx-copyright'></i>Copyright  <span class="date"></span></p>
+    </footer>
 
     <script src="../script.js" type="text/javascript"></script>
+    <script src="../../index.js" type="text/javascript"></script>
 </body>
 </html>
