--- a/sideProject/classe/classe.html
+++ b/sideProject/classe/classe.html
@@ -14,7 +14,7 @@
 
        <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
-    <title>Ecole Imam Moussa Touré / Les Classes</title>
+    <title>Ecole Imam Moussa Touré</title>
 </head>
 <body>
     <nav id="navbar">
@@ -26,10 +26,10 @@
         <!-- <h3><a href="../../index.html">Diallo.School</a></h3> -->
         <ul>
             <p class="close-btn"><i class="fa-solid fa-xmark" style="color: #000000;"></i></p>
-            <li><a href="">About</a></li>
+            <li><a href="../about/about.html">About</a></li>
             <li><a href="../Abdministration/admin.html">Administration</a></li>
-            <li><a href="sideProject/classe/classe.html">Classes</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="classe.html">Classes</a></li>
+            <li><a href="../Info/info.html">info</a></li>
         </ul>
         <div class="bars"><i class="fa-solid fa-bars"></i></div>
     </nav>
@@ -196,8 +196,8 @@
         </div>
     </section>
 
-    <div class="globe">
-        <img src="../../image/tinywow_change_bg_photo_39782213.png" alt="">
+    <footer>
+        <img src="../../logo2.png" alt="">
         <div id="footer">
             <h2>Diallo.School</h2>
             <hr>
@@ -221,9 +221,10 @@
             </div>
         </div>
         <hr>
-        <p class="copy">Copyright  <span class="date"></span></p>
-    </div>
+        <p class="copy"><i class='bx bx-copyright'></i>Copyright  <span class="date"></span></p>
+    </footer>
 
     <script src="../script.js" type="text/javascript"></script>
+    <script src="../../index.js" type="text/javascript"></script>
 </body>
 </html>
