--- a/index.html
+++ b/index.html
@@ -30,11 +30,10 @@
         
         <ul>
             <p class="close-btn"><i class="fa-solid fa-xmark"></i></p>
-            <li><a href="#">About</a></li>
-
+            <li><a href="sideProject/classe/about.html">About</a></li>
             <li><a href="sideProject/Abdministration/admin.html">Administration</a></li>
             <li><a href="sideProject/classe/classe.html">Classes</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="sideProject/classe/info.html">info</a></li>
         </ul>
         <div class="bars"><i class="fa-solid fa-bars"></i></div>
     </nav>
